# loci

./: .env.example  .gitignore  README.md  USER_GUIDE.md  pyproject.toml
loci.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
loci/models/: schemas.py
loci/services/: agent_orchestrator.py  embedding_service.py  grounding_service.py  ingestion_pipeline.py  openai_service.py  storage_service.py
loci/ui/: ai_interaction_log.py  artifact_views.py  content_reader.py  discussion_pane.py  left_library_pane.py  main_window.py  theme.py  widgets.py
tests/: test_agent_orchestrator.py  test_grounding.py  test_ingestion.py  test_recursive_context_engine.py  test_storage.py
